Fixed default filter Operator